[change] 実行ファイルの命名

--- a/tests/doc_test/test_search_arxiv_execute.yml
+++ b/tests/doc_test/test_search_arxiv_execute.yml
@@ -9,8 +9,8 @@ query:
   abs: ""
   cat: "cs.AI"
   all: ""
-  submittedDate_from: "20250219000000"
-  submittedDate_to: "20250220000000"
+  # submittedDate_from: "20250219000000"
+  # submittedDate_to: "20250220000000"
 
 options:
   max_results: 1000
