[add]semanticscholarの著者検索

--- a/doc/params/app.yml
+++ b/doc/params/app.yml
@@ -1,2 +1,8 @@
+threading:
+  enabled: false
+  num_workers: 10
+  chunk_size: 1000
+
 filepath:
-  search_arxiv: doc/params/search_arxiv.yml
+  search_arxiv: "doc/params/search_arxiv.yml"
+  search_google_scholar: "doc/params/search_google_scholar.yml"
