--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,8 +5,8 @@ services:
       context: .
       dockerfile: etc/docker/Dockerfile.crawler
     volumes:
-      - ./src-crawler:/app
-      - ./params:/app/params
+      - ./src_crawler:/app
+      - ./doc/params:/app//doc/params
       - ./output:/app/output
       - ./scripts:/app/scripts
     ports:
@@ -20,8 +20,8 @@ services:
       context: .
       dockerfile: etc/docker/Dockerfile.bot
     volumes:
-      - ./src-slackbot:/app
-      - ./params:/app/params
+      - ./src_slackbot:/app
+      - ./doc/params:/app/doc/params
       - ./output:/app/output
       - ./scripts:/app/scripts
     ports:
