[add] スケジュール実行 週単位収集とメッセージング

--- a/doc/params/bot.yml
+++ b/doc/params/bot.yml
@@ -3,3 +3,6 @@ crawler:
     url: 'http://surveyor:8080/items'
     data: {"scope": "latest", "topn": 10, "sortby": "author-cited"}
     headers: {"accept": "application/json", "content-type": "application/json"}
+
+  weekly:
+    url: 'http://surveyor:8080/execute/weekly'
