--- a/etc/docker/Dockerfile.bot
+++ b/etc/docker/Dockerfile.bot
@@ -8,10 +8,13 @@ RUN apt-get update && apt-get install -y \
     curl \
     software-properties-common \
     git \
+    cron \
     && rm -rf /var/lib/apt/lists/*
 
 # Copy the current directory contents into the container at /app
 COPY . /app
+COPY ./scripts/entrypoint.sh /tmp/
+COPY ./etc/cron/bot/root /var/spool/cron/crontabs/
 
 RUN pip install --upgrade pip
 
@@ -19,5 +22,7 @@ RUN echo "|--> Install Python Packages" && \
     pip install --break-system-packages -r etc/docker/requirements.bot.txt --no-cache-dir
 
 SHELL ["source", "etc/.env"]
-SHELL ["ls"]
+
+ENTRYPOINT ["../tmp/entrypoint.sh"]
+
 CMD ["python", "src/app.py"]
