--- a/doc/params/app.yml
+++ b/doc/params/app.yml
@@ -4,4 +4,4 @@ threading:
   chunk_size: 1000
 
 filepath:
-  search_arxiv: "../doc/params/search_arxiv.yml"
+  search_arxiv: "doc/params/search_arxiv.yml"
